--- a/dmm/templates/dmm/comment/statistics.html
+++ b/dmm/templates/dmm/comment/statistics.html
@@ -1,10 +1,11 @@
 {% extends 'dmm/layout/main.html' %}
 {% block content %}
 
-  <div class="container">
-    {%  include 'dmm/specie/species.html' %}
-    {%  include 'dmm/tag/tags.html' %}
-    {%  include 'dmm/comment_round/comment_rounds.html' %}
-  </div>
+<div class="container">
+  {%  include 'dmm/specie/species.html' %}
+  {%  include 'dmm/tag/tags.html' %}
+  {%  include 'dmm/comment_round/comment_rounds.html' %}
+  {%  include 'dmm/result/result_table.html' with results=results %}
+</div>
 
 {% endblock content %}
