--- a/dmm/templates/dmm/result/_result.html
+++ b/dmm/templates/dmm/result/_result.html
@@ -1,16 +1,40 @@
-<div class="row">
-    <div class="card">
-        <div class="card-header">
-            Заголовок: {{ result.title }}
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Добавил {{ result.expert.name }}</h5>
-            <p class="card-text"><strong>Тип ресурса:</strong> {{ result.resource_type.name }}</p>
-            <p class="card-text"><strong>Тип контента:</strong> {{ result.content_type.name }}</p>
-            <p class="card-text"><strong>Язык контента:</strong> {{ result.language_type.name }}</p>
-            <p class="card-text"><strong>Дата публикации контента:</strong> {{ result.date }}</p>
-            <p class="card-text"><strong>Дата добавления контента:</strong> {{ result.create_date }}</p>
-            <a class="nav-link btn btn-secondary" href="{{ result.url }}">VISIT</a>
-        </div>
+<div class="row mt-5 border border-secondary rounded p-5 bg-light border">
+    <div class="col-9">
+        <h3>Контент</h3>
+    </div>
+    <div class="col-3">
+        <a class="nav-link btn btn-secondary" href="{{ result.url }}">CONTENT</a>
+    </div>
+    <div class="col-3">
+        <h6>Дата публикации:</h6>
+        {{ result.date }}
+    </div>
+    <div class="col-3">
+        <h6>Тип контента:</h6>
+        {{ result.content_type.name }}
+    </div>
+    <div class="col-3">
+        <h6>Язык контента:</h6>
+        {{ result.language_type.name }}
+    </div>
+    <div class="col-3">
+        <h6>Ресурс:</h6>
+        {{ result.resource_type.name }}
+    </div>
+    <div class="col-12">
+        <h6>Заголовок:</h6>
+        <p>{{ result.title }}</p>
+    </div>
+    <div class="col-12">
+        <h6>Текст контента:</h6>
+        <p>{{ result.text }}</p>
+    </div>
+    <div class="col-4">
+        <h6>Добавил:</h6>
+        {{ result.expert.name }}
+    </div>
+    <div class="col-4">
+        <h6>Дата добавления:</h6>
+        {{ result.created }}
     </div>
 </div>
